--- a/css/styles.css
+++ b/css/styles.css
@@ -167,4 +167,17 @@ p {
         width: 15%;
         margin: 40px 40px;
     }
+
+    .nav-link {
+        font-size: 1.4rem;
+        font-weight: 500;
+    }
+
+    .nav-item {
+        padding: 0 2%;
+    }
+
+    p{
+        font-size: 1.4rem;
+    }
 }
